--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -135,8 +135,6 @@ button{
 .image-video{
   object-fit: cover;
   position: relative;
-  height: 100svh;
-  width: 100svw;
   height: 100vh;
   width: 100vw;
 }
@@ -293,6 +291,12 @@ video{
   .nav__login{
     margin-left: 0px;
   }
+  .logo-header_text{
+    display: none;
+  }
+  .nav__close{
+    color: #3c87c9;
+  }
 }
 .nav__img{
   width: 100px;
@@ -318,7 +322,7 @@ video{
 
 .nav__link{
   text-transform: uppercase;
-  font-weight: var(--font-black);
+  font-weight: var(--font-semi-bold);
   transition: .3s;
 }
 
