--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1057,6 +1057,21 @@ video{
   .footer-bar{
     padding: 64px 0;
   }
+  html {
+    background-color: red;
+    overflow: hidden;
+    width: 100%;
+  }
+  
+  body {
+    height: 100%;
+    position: fixed;
+    /* prevent overscroll bounce*/
+    background-color: lightgreen;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    /* iOS velocity scrolling */
+  }
 }
 
 /* For medium devices */
